<resources>
    <string name="app_name">Upofood</string>
    <string name="hint_username" translatable="false">Username</string>
    <string name="hint_name">Nome</string>
    <string name="hint_surname">Cognome</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="button_sign_in">Accedi</string>
    <string name="button_sign_up">Registrati</string>
    <string name="button_send">Invia</string>
    <string name="text_forgot_password">Password dimenticata?</string>
    <string name="text_signin_message">Ciao, accedi al tuo account</string>
    <string name="text_signin_social_media">Oppure accedi usando un social network</string>
    <string name="text_signup_social_media">Oppure registrati usando un social network</string>
    <string name="text_signin_signup">Non hai ancora un account? <b>Registrati</b></string>
    <string name="text_signup_terms">Registrandoti, acconsentirai ai nostri <b>termini e condizioni d\'uso</b></string>
    <string name="text_signup_message">Ciao, completa il tuo account</string>
    <string name="added">Utente registrato con successo!</string>
    <string name="redirect">Tra poco verrai reindirizzato alla home</string>
    <string name="text_forgot_password_title">Password dimenticata? Nessun problema</string>
    <string name="text_forgot_password_message">Ti invieremo un link per resettare la password</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_confirm_password">Conferma Password</string>
    <string name="next">Avanti</string>
    <string name="skip">Salta</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="facebook_app_id" translatable="false">151026239999095</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb151026239999095</string>
    <string name="client">Cliente</string>
    <string name="rider" translatable="false">Rider</string>
    <string name="choose">Scegli tipo utente</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Profilo</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_categories">Categorie</string>
    <string name="menu_chat" translatable="false">Chat</string>
    <string name="list_trips">Lista viaggi</string>
    <string name="lbl_current_location">Posizione corrente</string>
    <string name="hint_address">Indirizzo</string>
    <string name="hint_provincia">Provincia</string>
    <string name="hint_address_type" translatable="false">Address Type</string>
    <string name="hint_city">Città</string>
    <string name="hint_pin_code">Cap</string>
    <string name="error_no_internet">Oops!! Non sei connesso a internet</string>
    <string name="error_field_required">Campo richiesto</string>
    <string name="error_pwd_digit_required">Richieste al massimo 6 cifre</string>
    <string name="error_enter_valid_email">Inserisci una email valida</string>
    <string name="error_password_not_matches">Password non corrispondente</string>
    <string name="error_gps_not_enabled">La geolocalizzazione GPS non è attiva</string>
    <string name="error_something_went_wrong">Qualcosa è andato storto</string>
    <string name="error_permission_required">Richiesto permesso per la posizione</string>
    <string name="error_address_type">Per favore, seleziona il tipo di indirizzo</string>
    <string name="add_product">Aggiungi prodotto</string>
    <string name="hint_product">Nome prodotto</string>
    <string name="hint_description">Descrizione</string>
    <string name="hint_price">Prezzo</string>
    <string name="hint_qty">Quantità</string>
    <string name="hint_categories">Categoria</string>
    <string name="submit">Invia</string>
    <string name="add_image">Aggiungi immagine</string>
    <string name="lbl_select_category">Seleziona la categoria</string>
    <string name="text_todo">Chiudi</string>
    <string name="bimbi">Articoli per il bambino</string>
    <string name="carne">Carne</string>
    <string name="bevande">Bevande</string>
    <string name="casa">Tutto per la casa</string>
    <string name="dolci">Dolci</string>
    <string name="frutta_e_verdura">Frutta e verdura</string>
    <string name="gastronomia_pasta_fresca">Gastronomia e pasta fresca</string>
    <string name="gelati_surgelati">Gelati e surgelati</string>
    <string name="igiene_personale">Igiene personale</string>
    <string name="latticini">Latte, burro, uova e yogurt</string>
    <string name="pane_e_pasticceria">Pane e pasticceria</string>
    <string name="pesce">Pesce</string>
    <string name="prodotti_alimentari">Prodotti alimentari</string>
    <string name="prodotti_animali">Prodotti animali</string>
    <string name="ricorrenze">Prodotti per festività</string>
    <string name="salumi_e_formaggi">Salumi e formaggi</string>
    <string name="tempo_libero">Tempo libero</string>
    <string name="lbl_select_media">Scegli immagine da…</string>
    <string name="fromCamera">Scatta foto</string>
    <string name="fromGallery">Scegli dalla galleria</string>
    <string name="lbl_add_to_cart">Aggiungi al carrello</string>
    <string name="lbl_buy_now">Concludi l\'acquisto</string>
    <string name="lbl_modify_product">Modifica il prodotto</string>
    <string name="magazzino">Prodotti rimasti: </string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="modifyProfile">Modifica il profilo</string>
    <string name="addGestore">Aggiungi gestore</string>
    <string name="storicoOrdini">Storico ordini</string>
    <string name="myRiders">I miei riders</string>
    <string name="manageAddress">Modifica l\'indirizzo</string>
    <string name="storicoOrdiniCliente">I miei ordini</string>
    <string name="storicoViaggi">I miei viaggi</string>
    <string name="myTransport">Il mio mezzo di trasporto</string>
    <string name="manageShop">Modifica informazioni negozio</string>
    <string name="signout">Disconnetti</string>
    <string name="lbl_submit_order">Effettua ordine</string>
    <string name="carrello">Carrello</string>
    <string name="ordini">Ordini attivi</string>
    <string name="menu_orders">Ordini attivi</string>
    <string name="newOrd">Nuovo</string>
    <string name="myOrders">I miei ordini</string>
    <string name="selectRider">Seleziona il rider</string>
    <string name="btnAccept">Ordine preso in carico</string>
    <string name="btnPrep">Ordine in preparazione</string>
    <string name="btnDelivered">Consegnato al rider</string>
    <string name="activeTrips">Viaggi attivi</string>
    <string name="richieste">Richieste</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAxcQ58i8ewyUQKMHg8n8xdzM0B8DVvHy0</string>
    <string name="chat_gestori">Chat gestori</string>
    <string name="chat_gestore">Chat gestore</string>
    <string name="aggiorna_profilo">Aggiorna profilo</string>
    <string name="aggiorna_negozio">Aggiorna negozio</string>
    <string name="nome_del_negozio">Nome del negozio</string>
    <string name="ordine_attivo">Ordine attivo</string>
    <string name="modifica_profilo">Modifica profilo</string>
    <string name="il_mio_negozio">Il mio negozio</string>
    <string name="seleziona_rider_per_la_consegna">Seleziona rider per la consegna</string>
    <string name="profile">Profilo</string>
    <string name="rate">Valuta il nostro servizio!</string>
    <string name="quality_prod">Qualità merce</string>
    <string name="delivery_fast">Velocità consegna</string>
    <string name="courtesy">Cortesia rider</string>
    <string name="back_home">Torna alla home</string>
    <string name="oh_oh">Qualcosa è andato storto…</string>
    <string name="retry">Se vuoi puoi ritentare una nuova consegna</string>
    <string name="active_trips">Lista viaggi attivi</string>
    <string name="intro_rider">Questo è il tuo account rider! Da qui potrai accettare/rifiutare viaggi, accedere a quelli attivi e parlare coi gestori nel negozio.</string>
    <string name="new_requests">Nuove richieste</string>
    <string name="chat_managers">Chat gestori</string>
    <string name="list_active_trips">Lista viaggi attivi</string>
    <string name="available">Sei disponibile?</string>
    <string name="enter_message">Inserisci messaggio</string>
    <string name="old_psw">Vecchia password</string>
    <string name="new_psw">Nuova password</string>
    <string name="adv_new_psw">I campi della password possono rimanere vuoti, pertanto la password non verrà modificata</string>
    <string name="my_vehicle">Il mio mezzo di trasporto</string>
    <string name="ask_vehicle">Con quale veicolo effettui le consegne?</string>
    <string name="bike">Bicicletta 🚲</string>
    <string name="monopattino">Monopattino 🛴</string>
    <string name="scooter">Moto 🛵</string>
    <string name="car">Automobile 🚗</string>
    <string name="space_shuttle" translatable="false">Space Shuttle 🚀</string>
    <string name="infos">Informazioni aggiuntive</string>
    <string name="marca">Marca</string>
    <string name="modello">Modello</string>
    <string name="save">Salva</string>
    <string name="order">Ordine:</string>
    <string name="client_order">Cliente:</string>
    <string name="address_order">Indirizzo di consegna:</string>
    <string name="preso_in_carico">Preso in carico</string>
    <string name="in_preparazione">In preparazione</string>
    <string name="consegnato_al_rider">Consegnato al rider</string>
    <string name="qty">Quantità</string>
    <string name="add_cart">Aggiungi al carrello</string>
    <string name="buy">Compra</string>
    <string name="modify_product">Modifica il prodotto</string>
    <string name="delete">Elimina</string>
    <string name="empty_cache">Svuota la cache</string>
    <string name="empty_cart">Il carrello è vuoto</string>
    <string name="subtotal">Subtotale:</string>
    <string name="iva_22">IVA (+22%):</string>
    <string name="total">Totale:</string>
    <string name="add_order">Effettua ordine</string>
    <string name="covid_19">Ti ricordiamo di indossare la mascherina durante l\'incontro con il nostro rider onde evitare il contagio da Coronavirus</string>
    <string name="your_order">Il tuo ordine</string>
    <string name="ask_delete">Sei sicuro di voler eliminare il prodotto?</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="added_product">Prodotto aggiunto</string>
    <string name="delivered">Consegnato</string>
    <string name="not_delivered">Non consegnato</string>
    <string name="indications">Indicazioni</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="chooseLang">Scegli la lingua</string>
    <string name="lang_it">Italiano</string>
    <string name="lang_en">Inglese</string>
    <string name="lang_es">Spagnolo</string>
    <string name="lang_ro">Rumeno</string>
    <string name="lang_sq">Albanese</string>
    <string name="btn_retry">Riprova</string>
    <string name="about" translatable="false">About</string>
    <string name="t1_about">Progetto realizzato interamente da Edoardo Benchea, MATRICOLA 20029345</string>
    <string name="t2_about">Progetto per l\'esame di Applicazioni Mobili, A.A. 2020/2021</string>
</resources>